<resources>
    <string name="app_name">청각장애인 네일아트</string>
    <string name="heading">NAIL SERVICE</string>
    <string name="greeting">
        고객님 안녕하세요?
        \n청각장애인 네일아티스트 입니다.
        \n현재 무료 네일케어 서비스를 제공하고 있습니다.
        \n서비스 한번 받아보세요. 최선을 다하겠습니다.^^
    </string>
    <string name="later">
        관심가져주셔서 감사합니다
        \n다음번엔 꼭 이용해 주세요^^
        \n즐거운 하루 되세요.
    </string>
    <string name="menu_msg">각 서비스별로 소요되는 시간을 확인 후 원하시는 서비스를 선택해 주세요</string>
    <string name="basiccare">기본 케어</string>
    <string name="nailcare">네일 컬러</string>
    <string name="gelnail">젤 네일</string>
    <string name="basic_care">기본 케어\n(약20분 소요)</string>
    <string name="nail_care">네일 컬러\n(약25분 소요)</string>
    <string name="gel_nail">젤 네일\n(약25분 소요)</string>
    <string name="followme">감사합니다. 고객님!\n저를 따라와 주세요.\n자리 안내해 드리겠습니다.</string>
    <string name="svcbegin">고객님 지금부터\n네일아트 서비스를 시작하겠습니다.\n도중에 아프거나 불편한 사항이 있으시면\n언제든지 우측의 <font color="red">아파요</font> 버튼을 눌러주세요!</string>
    <string name="step1">Step 1. 원하시는 손톱의 모양을 선택해 주세요</string>
    <string name="step2">Step 2. 먼저 채색 스타일을 선택후 적용할 손가락을 선택하세요.</string>
    <string name="step3">Step 3. 먼저 색상을 선택후 적용할 손가락을 선택하세요.</string>
    <string name="step4">Step 4. 아프시면 오른쪽의 Pain 버튼을 눌러주세요.</string>
    <string name="step5">
          고객님, 서비스는 어떠셨나요?
        \n오늘 받으신 네일아트 사진을 해시태그
        \n<![CDATA[#]]>청각장애네일아티스트 <![CDATA[#]]>한국장애인고용공단 과 함께(필수사항) 인스타그램/페이스북/트위터에 공유를 부탁드립니다. </string>
    <string name="howlong">얼마나 걸리죠?</string>
    <string name="yesok">네,좋아요</string>
    <string name="tobelater">다음에…</string>
    <string name="gofirstpage">처음으로</string>
    <string name="fullcot">풀콧</string>
    <string name="halfcot">반콧</string>
    <string name="frenchcot">프렌치</string>
    <string name="roundcot">라운드콧</string>
    <string name="color">Color</string>
    <string name="remaintime">남은시간 : 00 : %02d : %02d</string>
    <string name="Timeout">시간 종료</string>
</resources>
