<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_7sdp"
        android:background="#2b3499" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_7sdp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#2b3499" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f8b41c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="vertical">
            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="240dp"
                    android:layout_height="58dp"
                    android:src="@drawable/logo_company" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="288dp"
                    android:layout_height="58dp"
                    android:src="@drawable/logo_kead"
                    android:contentDescription="@string/busanlogo" />
            </LinearLayout>
            //-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/heading"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_28sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/_7sdp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_weight="1"
                        android:background="@drawable/button_rr"
                        android:gravity="center"
                        android:onClick="onClickBasic"
                        android:text="@string/basic_care"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/button_rr"
                        android:gravity="center"
                        android:onClick="onClickColor"
                        android:text="@string/nail_care"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_weight="1"
                        android:background="@drawable/button_rr"
                        android:gravity="center"
                        android:onClick="onClickGel"
                        android:text="@string/gel_nail"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/button_rr"
                        android:onClick="onClickLater"
                        android:padding="@dimen/_9sdp"
                        android:text="@string/tobelater"
                        android:textColor="#000"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="#ccc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_3sdp"
                    android:text="@string/menu_msg"
                    android:textColor="#333"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_7sdp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#2b3499" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f8b41c" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_7sdp"
        android:layout_gravity="bottom"
        android:background="#f8b41c" />
</LinearLayout>